--- a/org.openwms/trunk/core/org.openwms.core.domain.as/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.domain.as/pom.xml
@@ -220,6 +220,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.core.domain</artifactId>
+			<version>${project.version}</version>
             <scope>provided</scope>
 		</dependency>
 		<dependency>
