--- a/org.openwms/trunk/core/org.openwms.core.service.api/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.service.api/pom.xml
@@ -55,6 +55,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
