--- a/org.openwms/trunk/common/org.openwms.common.service.spring/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.service.spring/pom.xml
@@ -152,6 +152,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.framework.test</artifactId>
+            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
