--- a/org.openwms/trunk/common/org.openwms.common.integration.jpa/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.integration.jpa/pom.xml
@@ -124,6 +124,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.infrastructure.hsql</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -137,6 +138,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.framework.test</artifactId>
+            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
