--- a/org.openwms/trunk/core/org.openwms.core.infrastructure.oracle/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.infrastructure.oracle/pom.xml
@@ -90,6 +90,7 @@
             <groupId>org.openwms</groupId>
             <artifactId>oracle.jdbc.driver</artifactId>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
        
         <!-- Project dependencies -->
