--- a/org.openwms/trunk/common/org.openwms.common.integration.jpa/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.integration.jpa/pom.xml
@@ -137,8 +137,14 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.integration.jpa</artifactId>
+            <version>${core.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.framework.test</artifactId>
-            <version>${project.version}</version>
+            <version>${core.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
