--- a/org.openwms/trunk/common/org.openwms.common.domain/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.domain/pom.xml
@@ -67,7 +67,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
-            <scope>runtime</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
