--- a/org.openwms/trunk/app/pom.xml
+++ b/org.openwms/trunk/app/pom.xml
@@ -36,6 +36,7 @@
     <name>OpenWMS.org Application</name>
     <properties>
         <moduleDir>.</moduleDir>
+        <core.version>0.0.1-SNAPSHOT</core.version>
     </properties>
 
     <distributionManagement>
